[package]
name = "fono"
description = "Lightweight native voice-dictation daemon and CLI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[[bin]]
name = "fono"
path = "src/main.rs"

[features]
# Fono always ships local whisper.cpp STT and llama.cpp polish;
# cloud providers are additive. The default release builds a single
# static binary with both locals enabled. The duplicate-ggml symbol
# collision is resolved at link time by
# `-Wl,--allow-multiple-definition` set in `.cargo/config.toml`.
#
# `tts-local` is also default as of 2026-06-02: the shipped binary does
# local Piper TTS out of the box. This makes EVERY build of `fono`
# (including `cargo test`/`clippy` and all release variants) link the
# statically-pinned `libonnxruntime.a`, so `ORT_LIB_LOCATION` must point
# at it — run `scripts/fetch-onnxruntime.sh` first (CI does this
# automatically; see `.github/workflows/ci.yml` + `release.yml`):
#   export ORT_LIB_LOCATION="$(sh scripts/fetch-onnxruntime.sh)"
default = ["tray", "local-models", "llama-local", "interactive", "tts-local", "realtime", "wakeword-onnx"]
tray = ["fono-tray/tray-backend"]
# Realtime / speech-to-speech assistant (Gemini Live WebSocket). Forwards
# to `fono-assistant/realtime`. Default-on; the Live client's WebSocket
# dependency (tokio-tungstenite) is already in the binary graph, so this
# is net-zero on binary size.
realtime = ["fono-assistant/realtime"]
local-models = ["fono-stt/whisper-local"]
llama-local = ["fono-polish/llama-local", "fono-assistant/llama-local", "fono-mcp-server/llama-local"]
# Hardware acceleration features — fan out to the matching opt-in
# features on `fono-stt` and `fono-polish`, which themselves forward to
# `whisper-rs`/`llama-cpp-2`. Off by default because they require the
# corresponding SDK at build time (CUDA toolkit, Vulkan SDK, etc.);
# devs / packaging matrices opt in. Surfaced at runtime via
# `daemon::hardware_acceleration_summary`.
accel-cuda = ["fono-stt/accel-cuda", "fono-polish/accel-cuda", "fono-assistant/accel-cuda"]
accel-metal = ["fono-stt/accel-metal", "fono-polish/accel-metal", "fono-assistant/accel-metal"]
accel-vulkan = ["fono-stt/accel-vulkan", "fono-polish/accel-vulkan", "fono-assistant/accel-vulkan"]
accel-rocm = ["fono-stt/accel-hipblas", "fono-polish/accel-rocm", "fono-assistant/accel-rocm"]
accel-coreml = ["fono-stt/accel-coreml"]
accel-openblas = ["fono-stt/accel-openblas"]
# Live-dictation streaming pipeline + the audio-visualisation overlay
# (bars/oscilloscope/FFT/heatmap) used during batch recording and on
# the right side of the live panel. Default-on; the released binary
# ships with the streaming overlay, `record --live`, and
# `test-overlay`.
interactive = [
    "fono-stt/streaming",
    "fono-audio/streaming",
    "fono-overlay/real-window",
    "fono-core/budget",
    "dep:tokio-stream",
]
# X11 key injection via enigo (libxdo). Keep opt-in: requires `libxdo`
# at build time, which isn't installed on every Linux desktop. Users
# without `wtype`/`ydotool` on Wayland or `enigo` on X11 still get a
# working dictation thanks to fono-inject's clipboard fallback (see
# `fono_inject::type_text_with_outcome`).
enigo = ["fono-inject/enigo-backend"]
# Local ONNX voice stack (Piper TTS now; Kokoro/VAD/wake-word/streaming-STT
# later) on the statically-linked `ort` runtime. DEFAULT as of 2026-06-02
# (ADR 0032, `docs/binary-size.md`): the shipped `cpu`/`gpu` artefacts do
# local TTS out of the box. Building (any profile) requires `ORT_LIB_LOCATION`
# to point at the pinned `libonnxruntime.a` — `scripts/fetch-onnxruntime.sh`
# provides it.
tts-local = ["fono-tts/tts-local", "fono-mcp-server/tts-local"]
# Always-on wake-word ("hey fono") detection on the statically-linked `ort`
# runtime. DEFAULT as of 2026-06-23: the shipped binary swaps in the real
# openWakeWord ONNX detector (the energy/no-op stub remains the fallback when
# no model is present). Forwards to `fono-audio/wakeword-onnx`. The Rust/runtime
# cost is net-zero on the default binary (`ort` is already linked for
# `tts-local`); the only delta is the small `OnnxWakeWord` code path plus the
# wake-word ops now folded into the union `ops.config`
# (calibration/voice-models/ort/ops.config: MaxPool, Log, Pow, ReduceMax, Max,
# com.microsoft FusedGemm). For this to actually FIRE in a shipped artefact two
# host/CI steps must accompany the release:
#   1. Rebuild + re-host the minimal `libonnxruntime.a` for all 5 triples from
#      the wake-augmented union ops.config and re-pin the SHAs in
#      scripts/fetch-onnxruntime.sh. Until the hosted runtime carries the wake
#      ops a wake `.ort` cannot load (the detector falls back to the stub) —
#      the feature is simply inert, never broken.
#   2. Train + upload a wake model (`hey_jarvis` for validation now; the clean
#      Apache `hey_fono.ort` next) to the fono-voice mirror and pin it in
#      `fono-audio::wake_registry`.
wakeword-onnx = ["fono-audio/wakeword-onnx"]
# Windows v1 default feature set. Cargo's `default` list cannot be
# target-scoped, so Windows builds pass `--no-default-features --features
# windows-defaults` (see docs/build-windows.md and the CI `windows` job).
# This set includes `tts-local` and `wakeword-onnx`, the two features that
# pull the ONNX Runtime (`ort`) static library. They were previously
# omitted because the hosted Windows `onnxruntime.lib` was not a
# self-contained merged archive (its protobuf/abseil/onnx/cpuinfo deps
# were unresolved at link time — `LNK1120`). fono-voice's
# build-onnxruntime workflow now merges the whole MinSizeRel tree
# (including the FetchContent `_deps`) and strips MSVC debug info, so the
# published lib links cleanly and is ~117 MiB (down from a bloated
# 343 MiB). Local whisper STT and local llama polish do NOT use `ort` but
# stay too, as do all cloud providers, the streaming overlay, tray, and
# realtime.
#
# `accel-vulkan` is included so Windows ships a single GPU-accelerated
# `.exe`: the in-tree Vulkan loader shim (`fono-core::vk_loader_shim`)
# soft-loads `vulkan-1.dll` at runtime, so the same binary uses the GPU
# when the vendor driver's loader is present and falls back to CPU when
# it is absent — no separate cpu/gpu download, no launch failure on a
# driver-less box. See `plans/2026-07-12-vulkan-soft-load-single-build-v1.md`,
# Phase 2 (this supersedes the CPU-only-v1 note in the Windows port plan).
windows-defaults = ["tray", "local-models", "llama-local", "interactive", "realtime", "accel-vulkan", "tts-local", "wakeword-onnx"]

[dependencies]
fono-core = { path = "../fono-core", features = ["vulkan-probe"] }
fono-audio = { path = "../fono-audio" }
fono-http = { path = "../fono-http" }
fono-stt = { path = "../fono-stt", features = ["groq", "openai", "openrouter", "deepgram", "cartesia", "speechmatics", "elevenlabs", "gemini", "wyoming"] }
# Default builds ship every cloud backend wired in the catalogue —
# fono-stt: Groq/OpenAI/Deepgram (+ Wyoming LAN); fono-polish:
# Cerebras/OpenAI-compat/Anthropic; fono-tts: all five hosted
# providers (+ Wyoming LAN). This means `fono use <stt|polish|tts>
# <provider>` and the wizard's primary picker work out of the box for
# every catalogued provider without recompiling. Each feature only
# adds an HTTP client (reqwest is already pulled in transitively); no
# native deps.
fono-tts = { path = "../fono-tts", features = ["wyoming", "openai", "groq", "openrouter", "cartesia", "deepgram", "speechmatics", "elevenlabs", "gemini"] }
fono-polish = { path = "../fono-polish", features = ["cerebras", "openai-compat", "anthropic"] }
fono-assistant = { path = "../fono-assistant" }
fono-hotkey = { path = "../fono-hotkey" }
fono-inject = { path = "../fono-inject" }
fono-tray = { path = "../fono-tray" }
fono-overlay = { path = "../fono-overlay" }
fono-ipc = { path = "../fono-ipc" }
fono-download = { path = "../fono-download" }
fono-update = { path = "../fono-update" }
# LAN servers (Wyoming today; mDNS + Fono-native land in Slices 4–6).
# Default-on so `fono serve wyoming` works in the standard build.
fono-net = { path = "../fono-net", features = ["discovery"] }
fono-mcp-server = { path = "../fono-mcp-server" }
mdns-sd = { workspace = true }

anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = "4.5"
console = { workspace = true }
dialoguer = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
crossbeam-channel = { workspace = true }
tempfile = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true, optional = true }
# Real-input FFT for the `fft` and `heatmap` waveform styles. Small
# (no_std-capable) and cheap; only invoked from the level-ticker task
# when the standalone waveform overlay is active.
realfft = "3"
# Used by the desktop installer to dlopen-probe `libxkbcommon-x11.so.0`
# before offering to install it via the host package manager. Already
# in the dep graph via fono-overlay.
libloading = "0.8"

[dev-dependencies]
async-trait = { workspace = true }
tempfile = { workspace = true }

# CoreAudio capture/playback on macOS (plan Task 4.1): cpal is the only
# audio path there (the Linux default is process-backed parec/paplay,
# which does not exist on darwin), so the binary enables fono-audio's
# cpal backend unconditionally on this target. Target tables do not
# unify off-target, so Linux builds are byte-identical. cpal is already
# a workspace dependency; on macOS it links only system frameworks
# (CoreAudio/AudioToolbox).
[target.'cfg(target_os = "macos")'.dependencies]
fono-audio = { path = "../fono-audio", features = ["cpal-backend"] }
# CGEvent text injection on macOS (plan Task 6.1): enigo is the only
# keystroke path there (wtype/ydotool/xdotool are Linux tools). The
# feature stays opt-in on Linux (libxdo dev headers not guaranteed);
# enigo's darwin deps (core-graphics, icrate, objc2) are already in
# Cargo.lock, so this adds no new-to-project crates.
fono-inject = { path = "../fono-inject", features = ["enigo-backend"] }

# WASAPI capture/playback on Windows (plan Task 5.1): cpal is the only
# audio path there (the Linux default parec/paplay are process-backed
# PulseAudio tools that do not exist on Windows). Mirrors the macOS
# block above — it enables fono-audio's cpal backend on this target
# only, so Linux and macOS builds stay byte-identical. cpal links the
# system WASAPI stack via the `windows-sys` crates already in
# Cargo.lock; no new-to-project dependency. `ort` is NOT pulled in here
# (fono-audio's `ort` edge is gated behind its own `wakeword-onnx`
# feature, which the Windows build omits — see `windows-defaults`).
[target.'cfg(target_os = "windows")'.dependencies]
fono-audio = { path = "../fono-audio", features = ["cpal-backend"] }
# Win32 `SendInput` text injection on Windows (plan Task 7.1): enigo is
# the only keystroke path there (wtype/ydotool/xdotool are Linux tools,
# and there is no X11/Wayland cascade — see `Injector::detect_auto`,
# which short-circuits to `Enigo` on non-Linux). Mirrors the macOS
# block above. enigo needs no libxdo on Windows (it calls `SendInput`
# directly) and its Windows deps (`windows 0.56`) are already in
# Cargo.lock, so this adds no new-to-project crates. Clipboard fallback
# stays available via fono-inject's non-optional `arboard` dep, which
# speaks the Win32 clipboard natively.
fono-inject = { path = "../fono-inject", features = ["enigo-backend"] }
# Thin Win32 FFI for `attach_parent_console()` in main.rs: the shipped
# tray build is a GUI-subsystem binary (no console window on launch), so
# it re-attaches to the parent terminal for CLI subcommands. Uses
# `AttachConsole` / `SetStdHandle` from here; `CreateFileW` is declared
# directly against kernel32 in main.rs (its windows-sys binding drifts
# across module-feature unions between releases). windows-sys is already
# in Cargo.lock (pulled transitively by cpal), so this adds no
# new-to-project crate and is net-zero on binary size.
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
] }
